# sidechannel-chiledao-mvp

./: .gitignore  README.md
ConnectNodePython/: connectNode.py  requirements.txt
html/: package-lock.json  package.json
html/src/: index.html  organization-ai-guidelines.html  organization-ai.html  organization-members.html  organization-payments.html  organization.html  payout-confirm.html  payouts.html  sidebar.html  task-edit.html  task-new.html  task-score.html  task.html  ui-demo.html  wallet-popup.html  workstream-new.html  workstream-tasks.html
html/src/css/: styles.css
html/src/js/: main.js
html/src/scss/: _functions.scss
html/src/scss/base/: _generic.scss  _index.scss  _typography.scss
html/src/scss/components/: _badges.scss  _card.scss  _dot.scss  _index.scss  _loader.scss  (+1 more)
nuxt-app/: nuxt.config.ts  package-lock.json  package.json  upload-contract.ts
nuxt-app/assets/scss/: _mixins.scss  _variables.scss  styles.scss
nuxt-app/components/: AppFooter.vue  AppNavbar.vue  SectionHeader.vue  SectionNav.vue  WalletConnectModal.vue
nuxt-app/composables/: useShortenAddress.ts
nuxt-app/layouts/: default.vue
nuxt-app/pages/: index.vue  tasks.vue
nuxt-app/pages/organization/: artificial-intelligence.vue  dev-tools.vue  index.vue  members.vue  payments.vue
nuxt-app/pages/payouts/: confirm-payment.vue  index.vue
nuxt-app/pages/workstreams/: new.vue
nuxt-app/server/api/: evaluate-ai.ts  hello.ts
nuxt-app/server/utils/: aiPrompts.ts  geminiApi.ts
nuxt-app/stores/: sidechannelWallet.js  workstreams.js
sidechannel_contract/: Cargo.toml  lib.rs
(+43 files in other folders)
